--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "locale": "ja_JP.UTF-8",
+  "locale": "ja_JP",
   "encoding": "UTF-8",
   "platform": "4.5.0",
   "metadata": {
